--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -37,7 +37,7 @@
             </ul>
           </div>
           <div class="d-flex align-items-center">
-            <div class="input-group me-3">
+            <div class="input-group me-1">
               <input type="text" class="form-control position-relative" placeholder="What are you looking for?">
               <span class=""><i class="fas fa-search position-absolute"></i></span>
             </div>
@@ -72,7 +72,8 @@
                   <i class="fas fa-sign-out-alt me-2" ></i> Logout
                 </li>
               </ul>
-            </div>
+            
+          </div>
           </div>
         </div>
       </nav>
@@ -94,10 +95,11 @@
         </div>
 
         <div class="col-8 image-container1">
-            <img src="https://via.placeholder.com/800x400" alt="Promotional Image">
-            <div class="image-text">
-                <h1>Up To 10% Off Voucher</h1>
-                <a href="#" class="shop-now">Shop Now <i class="fas fa-chevron-right"></i></a>
+            <img src="assets/images/imgg.png" alt="Promotional Image">
+            <div class="image-text mt-1">
+             <p><i class="fa-brands fa-apple fs-2 pe-3"></i> iphone 14 Series</p>
+                <h1>Up To 10% <br> Off Voucher</h1>
+                <a href="#" class="shop-now">Shop Now <i class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="dots">
                 <div class="dot"></div>
