--- a/src/app/chechout/chechout.component.css
+++ b/src/app/chechout/chechout.component.css
@@ -200,3 +200,23 @@ td, tr {
       }
   }
 
+  @media (max-width: 991.98px) {
+    .navbar {
+        padding: 10px 20px; 
+    }
+    .navbar .nav-link {
+        margin-right: 10px; 
+    }
+    .navbar .input-group .form-control {
+        min-width: 180px; 
+    }
+  }
+  
+  @media (max-width: 575.98px) {
+    .navbar {
+        padding: 10px 10px; 
+    }
+    .navbar .nav-link {
+        margin-right: 5px;
+    }
+  }
