--- a/src/app/product-details/product-details.component.css
+++ b/src/app/product-details/product-details.component.css
@@ -381,7 +381,29 @@ border-radius: 5px;
   
     }
   }
-
+  @media (max-width: 991.98px) {
+    .navbar {
+        padding: 10px 20px; 
+    }
+    .navbar .nav-link {
+        margin-right: 10px; 
+    }
+    .navbar .input-group .form-control {
+        min-width: 180px; 
+    }
+  }
+  
+  @media (max-width: 575.98px) {
+    .navbar {
+        padding: 10px 10px; 
+    }
+    .navbar .nav-link {
+        margin-right: 5px;
+    }
+    .image-container2 {
+      width: 300px;
+    }
+  }
 
 
 
