--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -71,6 +71,37 @@
   margin-left: -30px;
   top: 10px;
 }
+
+.navbar .input-group .form-control {
+  padding-right: 30px;
+}
+
+.navbar .input-group .input-group-text i {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+}
+
+.navbar .input-group .dropdown-menu.show {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  display: block;
+  max-height: 200px;
+  overflow-y: auto;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
+}
+
+.result-image {
+  width: 30px;
+  height: 30px;
+  margin-right: 8px;
+  vertical-align: middle;
+}
+
   /* section 1 */
   .sidebar {
     padding-top: 25px;
